# osdatahub

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  github_issue.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
Examples/: CRS pitfalls.ipynb  Converting API Results into Common Data Formats.ipynb  Defining Extents for API Queries.ipynb  Filtering Attributes for API Queries.ipynb  Interactive Plotting for API Results - Folium.ipynb  OS API Wrapper - Filtering Queries.ipynb  Plotting API Results - GeoPandas, Matplotlib and Contextily.ipynb  Post Processing API Queries.ipynb  Quick Start Guide.ipynb  Setting up an API key.ipynb  Using the NGD API.ipynb  Using the NGD Features API.ipynb
docs/: .buildinfo  DownloadsAPI.rst  Extent.html  Extent.rst  FeaturesAPI.html  FeaturesAPI.rst  LinkedIdentifiersAPI.rst  MatchAndCleanseAPI.rst  NGD.rst  NamesAPI.rst  PlacesAPI.html  Utilities.html  Utilities.rst  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  readme_link.html  readme_link.rst  requirements.txt  search.html  searchindex.js
docs/.doctrees/: Extent.doctree  FeaturesAPI.doctree  PlacesAPI.doctree  Utilities.doctree  environment.pickle  index.doctree  readme_link.doctree
docs/_sources/: PlacesAPI.rst.txt  (+2 more)
recipes/: meta.yaml
source/: conf.py  index.rst
tests/: run_functions.py  test_async_ngd.py  test_clean_polygon.py  test_downloads_api.py  test_extent.py  test_features_api.py  test_filters.py  test_grow_list.py  test_linked_identifiers_api.py  test_match_and_cleanse_api.py  test_names_api.py  test_ngd.py  test_places_api.py  test_utils.py
(+73 files in other folders)
