[metadata]
name = osdatahub
version = 1.2.5
author = OS Rapid Prototyping
author_email = rapidprototyping@os.uk
classifiers =
    Natural Language :: English
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities
    Topic :: Scientific/Engineering :: GIS
description = osdatahub is Ordnance Survey's (OS) Python API wrapper, designed to make data from the OS Data Hub APIs readily accessible to developers.
download_url = https://pypi.org/project/osdatahub/
keywords =
    Ordnance-Survey
    GIS
    united-kingdom
license = OGL
license_file = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Code = https://github.com/OrdnanceSurvey/osdatahub
    Documentation = https://osdatahub.readthedocs.io/en/latest/
    Issues = https://github.com/OrdnanceSurvey/osdatahub/issues
url = https://github.com/OrdnanceSurvey/osdatahub

[options]
include_package_data = True
install_requires =
    geojson~=2.5.0
    requests~=2.25.0
    typeguard~=2.13.0
    shapely~=1.8.0
    tqdm~=4.62.3
python_requires = >=3.7
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.extras_require]
dev =
    requests-mock
    pytest
    python-dotenv
docs =
    sphinx
    sphinx_rtd_theme
    sphinxcontrib-napoleon
    myst-parser
    sphinx-autodocgen
    sphinx-autopackagesummary
